# Intellidocs

./: .env  .gitignore  Dockerfile  README.md  app.py  client.py  pyproject.toml  requirements.txt  server.py  ui.py
algorithms/: cosine_similarity.py
app/: __init__.py
app/routes/: auth.py  chat.py  home.py  upload.py
app/static/: style.css
app/templates/: index.html  intellidocschat.html
app/utils/: decorators.py  helpers.py
config/: settings.py
examples/: intellidocs_rag_main.py
grpc_v1/: client.py  server.py
id_chroma_db/cache/: POM_Unit-1_key_chunks.pkl  POM_Unit-1_key_embeddings.pkl  POM_Unit-1_key_text.pkl  health_key_chunks.pkl  health_key_text.pkl  intro_to_statistical_learning_key_chunks.pkl  intro_to_statistical_learning_key_text.pkl  monopoly_key_chunks.pkl  monopoly_key_embeddings.pkl  monopoly_key_text.pkl  nlp_key_chunks.pkl  nlp_key_text.pkl
intellidocs-client/: go.mod  go.sum  main.go
intellidocs-client/proto/: intellidocs.pb.go  intellidocs.proto  intellidocs_grpc.pb.go
llms/: gemini_response.py
milvus-docker/: docker-compose.yml
model/: faiss_saver.py  faiss_saver_and_responser.py  intellidoc_rag.py  intellidocs_RAG_V2.py  intellidocs_main.py  intellidocs_rag_final.py  intellidocs_rag_final_v1.py  intellidocs_rag_main.py  lchainrag.py  testrag.py  text_processor.py
model/llms/: gemini_response.py  (+1 more)
notebooks/: RAG_from_scratch.ipynb  rag_v1.ipynb
static/: intellidocsstyle.css
templates/: dashboard.html  index.html  intellidocschat.html  main.html
utils/: cleanup_chroma.py  cleanup_milvus.py  constants.py  dir_utils.py
(+69 files in other folders)
